--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     skills: ['GitOps', 'FluxCD', 'ArgoCD', 'Kubernetes', 'Nginx']
                 },
                 {
-                    client: 'PT STARA Indonesia (Tipidkor, Bareskrim Polri)',
+                    client: 'PT STARA Indonesia (Tipidkor)',
                     title: 'Secure Application Delivery',
                     details: 'Led the implementation of Cloudflare Tunneling to simplify application exposure and configured rate limiting in Nginx for production.',
                     skills: ['Cloudflare', 'Docker Swarm', 'Nginx', 'Portainer', 'Security']
