--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 
                     <div class="mt-auto pt-8">
                          <div class="flex items-center space-x-4">
+                            <a href="https://github.com/feriahmad" target="_blank" class="social-link">
+                                <span class="sr-only">GitHub</span>
+                                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+                            </a>
                             <a href="https://linkedin.com/in/feri-ahmad" target="_blank" class="social-link">
                                 <span class="sr-only">LinkedIn</span>
                                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/></svg>
@@ -137,6 +141,7 @@
                     company: 'Jabar Digital Service',
                     role: 'Senior Site Reliability Engineer',
                     period: '2023 — PRESENT',
+                    products: ['Sapawarga', 'Portal Jabar', 'PPDB Jabar'],
                     details: [
                         'Implemented a CI/CD pipeline, accelerating the software release process by 40%.',
                         'Led team collaboration to reduce public cloud costs by up to 80% for storage features.',
@@ -149,6 +154,7 @@
                     company: 'Jabar Digital Service',
                     role: 'Site Reliability Engineer',
                     period: '2021 — 2022',
+                    products: ['Sidebar Application'],
                     details: [
                         'Led infrastructure migration from VMware ESX to VDC, performing hardening and stress testing.',
                         'Reduced VM instance costs in GCP by up to 40% by automating scaling based on usage patterns.',
@@ -160,6 +166,7 @@
                     company: 'PT Satu Visi Kreasi Indonesia (Savikindo)',
                     role: 'DevOps Engineer',
                     period: '2020 — 2021',
+                    products: ['SIMAK Akademik', 'PPDB Kota Malang'],
                     details: [
                         'Designed and monitored a multi-tenant application for 300+ schools using a Kubernetes cluster.',
                         'Automated invoice email sending, reducing manual intervention by 90%.',
@@ -171,7 +178,7 @@
 
             const projectsData = [
                 {
-                    client: 'PT STARA Indonesia (BPDLH, Kementerian Keuangan)',
+                    client: 'PT STARA Indonesia (BPDLH, Kemenkeu)',
                     title: 'GitOps Workflow Implementation',
                     details: 'Pioneered GitOps workflows using FluxCD and ArgoCD, decreasing deployment frequency from weekly to daily and reducing rollback rate by 15%.',
                     skills: ['GitOps', 'FluxCD', 'ArgoCD', 'Kubernetes', 'Nginx']
@@ -192,6 +199,7 @@
                     <header class="md:col-span-1 text-sm font-semibold uppercase text-body group-hover:text-header transition-colors">${exp.period}</header>
                     <div class="md:col-span-3">
                         <h3 class="text-lg font-bold text-header group-hover:text-sky-300 transition-colors">${exp.role} · ${exp.company}</h3>
+                        <p class="text-sm font-semibold text-sky-400 mt-1">Key Products: ${exp.products.join(', ')}</p>
                         <ul class="mt-2 list-disc list-outside ml-4 text-body space-y-1">
                             ${exp.details.map(detail => `<li>${detail}</li>`).join('')}
                         </ul>
