--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     </div>
 
     <footer style="text-align: center; padding: 2rem; color: #666666; font-size: 0.875rem;">
-        <p>© 2025 • FERI AHMAD NURDIN — All rights reserved.</p>
+        <p>© 2025 • FERI AHMAD — All rights reserved.</p>
     </footer>
 
     <script>
