--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             <!-- Project 8: Reduce Cost with CDN -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="assets/Featured Project 255c835495868196a73df195b9df6506/Reduce Cost Up to 80% GCP with CDN 255c835495868059b674e8052fee01b6/reduce-cost.png" alt="CDN Cost Reduction">
+                    <img src="assets/Featured%20Project%20255c835495868196a73df195b9df6506/Reduce%20Cost%20Up%20to%2080%25%20GCP%20with%20CDN%20255c835495868059b674e8052fee01b6/reduce-cost.png" alt="CDN Cost Reduction">
                 </div>
                 <div class="project-content">
                     <div class="project-header">
