--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
         .project-image {
             width: 100%;
-            height: 200px;
+            height: 460px;
             background: #333;
             display: flex;
             align-items: center;
@@ -309,7 +309,7 @@
         .project-image img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
             background: #ffffff;
         }
 
