--- a/index.html
+++ b/index.html
@@ -202,12 +202,8 @@
             width: 100%;
             max-width: 280px;
             border-radius: 20px;
-            border: 3px solid rgba(255, 255, 255, 0.2);
+            border: none;
             transition: border-color 0.3s;
-        }
-
-        .light .profile-image img {
-            border-color: rgba(0, 0, 0, 0.1);
         }
 
         .bio-section {
