--- a/index.html
+++ b/index.html
@@ -202,8 +202,12 @@
             width: 100%;
             max-width: 280px;
             border-radius: 20px;
-            border: none;
+            border: 1px solid rgba(255, 255, 255, 0.1);
             transition: border-color 0.3s;
+        }
+
+        .light .profile-image img {
+            border-color: rgba(0, 0, 0, 0.05);
         }
 
         .bio-section {
